Revision history for HTML::Filter

          - Added version numbers to LESS and JS
          - CSS button bg using global styling
          - More CSS refactoring
          - CSS colour refactoring
          - CSS no longer has a sizes map
          - Renamed elementOffset to getElementOffset for consistancy
          - Switched to elementOffset from cumulativeOffset
          - Put selector button at end of field for consistancy
          - Specify rule editor width from config
          - Changed event register method name in JS utils
          - Fixes multi rendering bug
          - Renamed JS files to sort after Form JS ones
          - Register scan with Util.Event
          - Prevent multiple invocations
          - Find filter by id not class
          - Main package POD update
          - Added Perl packages, JS, and LESS files

0.1.1     2024-06-09 16:15:19
          - Added project files to master branch
